# ccsh

./: Makefile.am  README  README.md  autogen.sh  configure.ac  configure.sh
doc/: ccsh.1  ccsh.texi
meta/slackware/: slack-desc.in
src/etc/rc.d/: rc.ccsh.in
